--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- <div class="col-10 d-flex justify-content-around"> -->
               <div class="col-md-3 col-sm-6 mt-2 " >
                 <div class="card text-center text-bg-dark" style="width: 100% ;">
-                <img src="./images/food1.jpg"  class="card-img-top" alt="...">
+                <img src="Images/food1.jpg"  class="card-img-top" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Plain Dosa</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mt-2 " >
               <div class="card text-center text-bg-dark" style="width: 100% ;">
-              <img src="./images/noodles.webp"  class="card-img-top" alt="...">
+              <img src="Images/noodles.webp"  class="card-img-top" alt="...">
               <div class="card-body" >
                 <h5 class="card-title">noodles</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
           </div>
           <div class="col-md-3 col-sm-6 mt-2 " >
             <div class="card text-center text-bg-dark" style="width: 100% ;">
-            <img src="./images/Continental/Barbecued chicken.jpg"  class="card-img-top" alt="...">
+            <img src="Images/Continental/Barbecued chicken.jpg"  class="card-img-top" alt="...">
             <div class="card-body" >
               <h5 class="card-title">Barbecued chicken</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-md-3 col-sm-6 mt-2 " >
           <div class="card text-center text-bg-dark" style="width: 100% ;">
-          <img src="./images/Thai/Mango sticky rice.jpg"  class="card-img-top" alt="...">
+          <img src="Images/Thai/Mango sticky rice.jpg"  class="card-img-top" alt="...">
           <div class="card-body" >
             <h5 class="card-title">Mango sticky rice</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,7 +117,7 @@
       </div>
       <div class="col-md-3 col-sm-6 mt-4 " >
         <div class="card text-center text-bg-dark" style="width: 100% ;">
-        <img src="./images/Italian/arancini.jpg"  class="card-img-top" alt="...">
+        <img src="Images/Italian/arancini.jpg"  class="card-img-top" alt="...">
         <div class="card-body" >
           <h5 class="card-title">Arancini</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -127,7 +127,7 @@
     </div>
     <div class="col-md-3 col-sm-6 mt-4 " >
       <div class="card text-center text-bg-dark" style="width: 100% ;">
-      <img src="./images/Sea Foods/Pomfret Fish Fry.webp"  class="card-img-top" alt="...">
+      <img src="Images/Sea Foods/Pomfret Fish Fry.webp"  class="card-img-top" alt="...">
       <div class="card-body" >
         <h5 class="card-title">Pomfret Fish Fry</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,7 +137,7 @@
   </div>
   <div class="col-md-3 col-sm-6 mt-4 " >
     <div class="card text-center text-bg-dark" style="width: 100% ;">
-    <img src="./images/Chinese/Chilli chicken.jpg"  class="card-img-top" alt="...">
+    <img src="Images/Chinese/Chilli chicken.jpg"  class="card-img-top" alt="...">
     <div class="card-body" >
       <h5 class="card-title">Chilli chicken</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -147,7 +147,7 @@
 </div>
 <div class="col-md-3 col-sm-6 mt-4 " >
   <div class="card text-center text-bg-dark" style="width: 100% ;">
-  <img src="./images/Thai/Gaeng keow waan or green curry.jpg"  class="card-img-top" alt="...">
+  <img src="Images/Thai/Gaeng keow waan or green curry.jpg"  class="card-img-top" alt="...">
   <div class="card-body" >
     <h5 class="card-title">Gaeng keow waan or green curry</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
