--- a/Thai.html
+++ b/Thai.html
@@ -77,7 +77,7 @@
             <!-- <div class="col-10 d-flex justify-content-around"> -->
               <div class="col-md-3 col-sm-6 mt-2 " >
                 <div class="card text-center text-bg-dark" style="width: 100% ;">
-                <img src="images/Thai/chicken-massaman-curry.jpg"  class="card-img-top" alt="...">
+                <img src="Images/Thai/chicken-massaman-curry.jpg"  class="card-img-top" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Chicken Massaman Curry</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mt-2 " >
               <div class="card text-center text-bg-dark" style="width: 100% ;">
-              <img src="images/Thai/chicken_khao_soi.jpeg"  class="card-img-top" alt="...">
+              <img src="Images/Thai/chicken_khao_soi.jpeg"  class="card-img-top" alt="...">
               <div class="card-body" >
                 <h5 class="card-title">Chicken Khao Soi</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
           </div>
           <div class="col-md-3 col-sm-6 mt-2 " >
             <div class="card text-center text-bg-dark" style="width: 100% ;">
-            <img src="images/Thai/Gaeng keow waan or green curry.jpg"  class="card-img-top" alt="...">
+            <img src="Images/Thai/Gaeng keow waan or green curry.jpg"  class="card-img-top" alt="...">
             <div class="card-body" >
               <h5 class="card-title">Gaeng keow waan or green curry</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-md-3 col-sm-6 mt-2 " >
           <div class="card text-center text-bg-dark" style="width: 100% ;">
-          <img src="images/Thai/Khao pad (fried rice).jpg"  class="card-img-top" alt="...">
+          <img src="Images/Thai/Khao pad (fried rice).jpg"  class="card-img-top" alt="...">
           <div class="card-body" >
             <h5 class="card-title">Khao pad</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,7 +117,7 @@
       </div>
       <div class="col-md-3 col-sm-6 mt-4 " >
         <div class="card text-center text-bg-dark" style="width: 100% ;">
-        <img src="images/Thai/Mango sticky rice.jpg"  class="card-img-top" alt="...">
+        <img src="Images/Thai/Mango sticky rice.jpg"  class="card-img-top" alt="...">
         <div class="card-body" >
           <h5 class="card-title">Mango sticky rice</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -127,7 +127,7 @@
     </div>
     <div class="col-md-3 col-sm-6 mt-4 " >
       <div class="card text-center text-bg-dark" style="width: 100% ;">
-      <img src="images/Thai/papaya-salad.jpg"  class="card-img-top" alt="...">
+      <img src="Images/Thai/papaya-salad.jpg"  class="card-img-top" alt="...">
       <div class="card-body" >
         <h5 class="card-title">papaya-salad</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,7 +137,7 @@
   </div>
   <div class="col-md-3 col-sm-6 mt-4 " >
     <div class="card text-center text-bg-dark" style="width: 100% ;">
-    <img src="images/Thai/Shrimp-Pad-Thai.jpg"  class="card-img-top" alt="...">
+    <img src="Images/Thai/Shrimp-Pad-Thai.jpg"  class="card-img-top" alt="...">
     <div class="card-body" >
       <h5 class="card-title">Shrimp Pad Thai</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -147,7 +147,7 @@
 </div>
 <div class="col-md-3 col-sm-6 mt-4 " >
   <div class="card text-center text-bg-dark" style="width: 100% ;">
-  <img src="images/Thai/Tom yum soup.jpg"  class="card-img-top" alt="...">
+  <img src="Images/Thai/Tom yum soup.jpg"  class="card-img-top" alt="...">
   <div class="card-body" >
     <h5 class="card-title">Tom yum soup</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
