--- a/SeaFoods.html
+++ b/SeaFoods.html
@@ -77,7 +77,7 @@
             <!-- <div class="col-10 d-flex justify-content-around"> -->
               <div class="col-md-3 col-sm-6 mt-2 " >
                 <div class="card text-center text-bg-dark" style="width: 100% ;">
-                <img src="images/Sea Foods/Fish Amritsari.jpeg"  class="card-img-top" alt="...">
+                <img src="Images/Sea Foods/Fish Amritsari.jpeg"  class="card-img-top" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Fish Amritsari</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mt-2 " >
               <div class="card text-center text-bg-dark" style="width: 100% ;">
-              <img src="images/Sea Foods/Goan Fish Curry.jpeg"  class="card-img-top" alt="...">
+              <img src="Images/Sea Foods/Goan Fish Curry.jpeg"  class="card-img-top" alt="...">
               <div class="card-body" >
                 <h5 class="card-title">Goan Fish Curry</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
           </div>
           <div class="col-md-3 col-sm-6 mt-2 " >
             <div class="card text-center text-bg-dark" style="width: 100% ;">
-            <img src="images/Sea Foods/Grilled lobster.jpg"  class="card-img-top" alt="...">
+            <img src="Images/Sea Foods/Grilled lobster.jpg"  class="card-img-top" alt="...">
             <div class="card-body" >
               <h5 class="card-title">Grilled lobster</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-md-3 col-sm-6 mt-2 " >
           <div class="card text-center text-bg-dark" style="width: 100% ;">
-          <img src="images/Sea Foods/Prawns Balchao.jpg"  class="card-img-top" alt="...">
+          <img src="Images/Sea Foods/Prawns Balchao.jpg"  class="card-img-top" alt="...">
           <div class="card-body" >
             <h5 class="card-title">Prawns Balchao</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,7 +117,7 @@
       </div>
       <div class="col-md-3 col-sm-6 mt-4 " >
         <div class="card text-center text-bg-dark" style="width: 100% ;">
-        <img src="images/Sea Foods/Tandoori lobster.jpg"  class="card-img-top" alt="...">
+        <img src="Images/Sea Foods/Tandoori lobster.jpg"  class="card-img-top" alt="...">
         <div class="card-body" >
           <h5 class="card-title">Tandoori lobster</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -127,7 +127,7 @@
     </div>
     <div class="col-md-3 col-sm-6 mt-4 " >
       <div class="card text-center text-bg-dark" style="width: 100% ;">
-      <img src="images/Sea Foods/Bangdae_fish_fry.webp"  class="card-img-top" alt="...">
+      <img src="Images/Sea Foods/Bangdae_fish_fry.webp"  class="card-img-top" alt="...">
       <div class="card-body" >
         <h5 class="card-title">Bangdae Fish Fry</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,7 +137,7 @@
   </div>
   <div class="col-md-3 col-sm-6 mt-4 " >
     <div class="card text-center text-bg-dark" style="width: 100% ;">
-    <img src="images/Sea Foods/Fish Fry.jpg"  class="card-img-top" alt="...">
+    <img src="Images/Sea Foods/Fish Fry.jpg"  class="card-img-top" alt="...">
     <div class="card-body" >
       <h5 class="card-title">Fish Fry</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -147,7 +147,7 @@
 </div>
 <div class="col-md-3 col-sm-6 mt-4 " >
   <div class="card text-center text-bg-dark" style="width: 100% ;">
-  <img src="images/Sea Foods/Pomfret Fish Fry.webp"  class="card-img-top" alt="...">
+  <img src="Images/Sea Foods/Pomfret Fish Fry.webp"  class="card-img-top" alt="...">
   <div class="card-body" >
     <h5 class="card-title">Pomfret Fish Fry</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
