--- a/Italin.html
+++ b/Italin.html
@@ -77,7 +77,7 @@
             <!-- <div class="col-10 d-flex justify-content-around"> -->
               <div class="col-md-3 col-sm-6 mt-2 " >
                 <div class="card text-center text-bg-dark" style="width: 100% ;">
-                <img src="images/Italian/Cheese-Pizza.jpg"  class="card-img-top" alt="...">
+                <img src="Images/Italian/Cheese-Pizza.jpg"  class="card-img-top" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Cheese-Pizza</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mt-2 " >
               <div class="card text-center text-bg-dark" style="width: 100% ;">
-              <img src="images/Italian/Chicken Risotto.jpg"  class="card-img-top" alt="...">
+              <img src="Images/Italian/Chicken Risotto.jpg"  class="card-img-top" alt="...">
               <div class="card-body" >
                 <h5 class="card-title">Chicken Risotto</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
           </div>
           <div class="col-md-3 col-sm-6 mt-2 " >
             <div class="card text-center text-bg-dark" style="width: 100% ;">
-            <img src="images/Italian/garlic focaccia.jpg"  class="card-img-top" alt="...">
+            <img src="Images/Italian/garlic focaccia.jpg"  class="card-img-top" alt="...">
             <div class="card-body" >
               <h5 class="card-title">Garlic focaccia</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-md-3 col-sm-6 mt-2 " >
           <div class="card text-center text-bg-dark" style="width: 100% ;">
-          <img src="images/Italian/lasagna.jpg"  class="card-img-top" alt="...">
+          <img src="Images/Italian/lasagna.jpg"  class="card-img-top" alt="...">
           <div class="card-body" >
             <h5 class="card-title">Lasagna</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,7 +117,7 @@
       </div>
       <div class="col-md-3 col-sm-6 mt-4 " >
         <div class="card text-center text-bg-dark" style="width: 100% ;">
-        <img src="images/Italian/Pizza Margherita.jpg"  class="card-img-top" alt="...">
+        <img src="Images/Italian/Pizza Margherita.jpg"  class="card-img-top" alt="...">
         <div class="card-body" >
           <h5 class="card-title">Pizza Margherita</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -127,7 +127,7 @@
     </div>
     <div class="col-md-3 col-sm-6 mt-4 " >
       <div class="card text-center text-bg-dark" style="width: 100% ;">
-      <img src="images/Italian/Tiramisu.jpg"  class="card-img-top" alt="...">
+      <img src="Images/Italian/Tiramisu.jpg"  class="card-img-top" alt="...">
       <div class="card-body" >
         <h5 class="card-title">Tiramisu</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,7 +137,7 @@
   </div>
   <div class="col-md-3 col-sm-6 mt-4 " >
     <div class="card text-center text-bg-dark" style="width: 100% ;">
-    <img src="images/Italian/arancini.jpg"  class="card-img-top" alt="...">
+    <img src="Images/Italian/arancini.jpg"  class="card-img-top" alt="...">
     <div class="card-body" >
       <h5 class="card-title">Arancini</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -147,7 +147,7 @@
 </div>
 <div class="col-md-3 col-sm-6 mt-4 " >
   <div class="card text-center text-bg-dark" style="width: 100% ;">
-  <img src="images/Italian/carbonara.jpg"  class="card-img-top" alt="...">
+  <img src="Images/Italian/carbonara.jpg"  class="card-img-top" alt="...">
   <div class="card-body" >
     <h5 class="card-title">Carbonara</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
