--- a/Chinese.html
+++ b/Chinese.html
@@ -77,7 +77,7 @@
             <!-- <div class="col-10 d-flex justify-content-around"> -->
               <div class="col-md-3 col-sm-6 mt-2 " >
                 <div class="card text-center text-bg-dark" style="width: 100% ;">
-                <img src="images/Chinese/chicken chilli dry.jpg"  class="card-img-top" alt="...">
+                <img src="Images/Chinese/chicken chilli dry.jpg"  class="card-img-top" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Chilli Chicken</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mt-2 " >
               <div class="card text-center text-bg-dark" style="width: 100% ;">
-              <img src="images/Chinese/chicken crispy.jpg"  class="card-img-top" alt="...">
+              <img src="Images/Chinese/chicken crispy.jpg"  class="card-img-top" alt="...">
               <div class="card-body" >
                 <h5 class="card-title">Chicken Cripsy</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
           </div>
           <div class="col-md-3 col-sm-6 mt-2 " >
             <div class="card text-center text-bg-dark" style="width: 100% ;">
-            <img src="images/Chinese/chicken rolls.jpg"  class="card-img-top" alt="...">
+            <img src="Images/Chinese/chicken rolls.jpg"  class="card-img-top" alt="...">
             <div class="card-body" >
               <h5 class="card-title">Chicken Rolls</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-md-3 col-sm-6 mt-2 " >
           <div class="card text-center text-bg-dark" style="width: 100% ;">
-          <img src="images/Chinese/Chilli chicken.jpg"  class="card-img-top" alt="...">
+          <img src="Images/Chinese/Chilli chicken.jpg"  class="card-img-top" alt="...">
           <div class="card-body" >
             <h5 class="card-title">Chilli Chicken Dry</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,7 +117,7 @@
       </div>
       <div class="col-md-3 col-sm-6 mt-4 " >
         <div class="card text-center text-bg-dark" style="width: 100% ;">
-        <img src="images/Chinese/garlic  chicken rice.jpg"  class="card-img-top" alt="...">
+        <img src="Images/Chinese/garlic  chicken rice.jpg"  class="card-img-top" alt="...">
         <div class="card-body" >
           <h5 class="card-title">Garlic Chicken Rice</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -127,7 +127,7 @@
     </div>
     <div class="col-md-3 col-sm-6 mt-4 " >
       <div class="card text-center text-bg-dark" style="width: 100% ;">
-      <img src="images/Chinese/momos.jpg"  class="card-img-top" alt="...">
+      <img src="Images/Chinese/momos.jpg"  class="card-img-top" alt="...">
       <div class="card-body" >
         <h5 class="card-title">Chicken Momos</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -137,7 +137,7 @@
   </div>
   <div class="col-md-3 col-sm-6 mt-4 " >
     <div class="card text-center text-bg-dark" style="width: 100% ;">
-    <img src="images/Chinese/munchow-soup.jpg"  class="card-img-top" alt="...">
+    <img src="Images/Chinese/munchow-soup.jpg"  class="card-img-top" alt="...">
     <div class="card-body" >
       <h5 class="card-title">Munchow Soup</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -147,7 +147,7 @@
 </div>
 <div class="col-md-3 col-sm-6 mt-4 " >
   <div class="card text-center text-bg-dark" style="width: 100% ;">
-  <img src="images/Chinese/triple rice.jpg"  class="card-img-top" alt="...">
+  <img src="Images/Chinese/triple rice.jpg"  class="card-img-top" alt="...">
   <div class="card-body" >
     <h5 class="card-title">Triple Rice</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
