--- a/Italin.html
+++ b/Italin.html
@@ -46,7 +46,7 @@
                       Categories
                     </a>
                     <ul class="dropdown-menu" class="navbar" style="background-color: white;">
-                        <li><a class="dropdown-item" href="#">All</a></li>
+                        <li><a class="dropdown-item" href="index.html">All</a></li>
                         <li><a class="dropdown-item" href="Chinese.html">Chinese</a></li>
                         <li><a class="dropdown-item" href="Italin.html">Italian</a></li>
                         <li><a class="dropdown-item" href="Thai.html">Thai</a></li>
@@ -76,8 +76,8 @@
   <div class="row row2" style="margin-top: 50px;padding: 40px;">
             <!-- <div class="col-10 d-flex justify-content-around"> -->
               <div class="col-md-3 col-sm-6 mt-2 " >
-                <div class="card text-center text-bg-dark" style="width: 100% ;">
-                <img src="Images/Italian/Cheese-Pizza.jpg"  class="card-img-top" alt="...">
+                <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+                <img src="Images/Italian/Cheese-Pizza.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
                 <div class="card-body" >
                   <h5 class="card-title">Cheese-Pizza</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -86,8 +86,8 @@
               </div>
             </div>
             <div class="col-md-3 col-sm-6 mt-2 " >
-              <div class="card text-center text-bg-dark" style="width: 100% ;">
-              <img src="Images/Italian/Chicken Risotto.jpg"  class="card-img-top" alt="...">
+              <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+              <img src="Images/Italian/Chicken Risotto.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
               <div class="card-body" >
                 <h5 class="card-title">Chicken Risotto</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -96,8 +96,8 @@
             </div>
           </div>
           <div class="col-md-3 col-sm-6 mt-2 " >
-            <div class="card text-center text-bg-dark" style="width: 100% ;">
-            <img src="Images/Italian/garlic focaccia.jpg"  class="card-img-top" alt="...">
+            <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+            <img src="Images/Italian/garlic focaccia.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
             <div class="card-body" >
               <h5 class="card-title">Garlic focaccia</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -106,8 +106,8 @@
           </div>
         </div>
         <div class="col-md-3 col-sm-6 mt-2 " >
-          <div class="card text-center text-bg-dark" style="width: 100% ;">
-          <img src="Images/Italian/lasagna.jpg"  class="card-img-top" alt="...">
+          <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+          <img src="Images/Italian/lasagna.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
           <div class="card-body" >
             <h5 class="card-title">Lasagna</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -116,8 +116,8 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 mt-4 " >
-        <div class="card text-center text-bg-dark" style="width: 100% ;">
-        <img src="Images/Italian/Pizza Margherita.jpg"  class="card-img-top" alt="...">
+        <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+        <img src="Images/Italian/Pizza Margherita.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
         <div class="card-body" >
           <h5 class="card-title">Pizza Margherita</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -126,8 +126,8 @@
       </div>
     </div>
     <div class="col-md-3 col-sm-6 mt-4 " >
-      <div class="card text-center text-bg-dark" style="width: 100% ;">
-      <img src="Images/Italian/Tiramisu.jpg"  class="card-img-top" alt="...">
+      <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+      <img src="Images/Italian/Tiramisu.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
       <div class="card-body" >
         <h5 class="card-title">Tiramisu</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -136,8 +136,8 @@
     </div>
   </div>
   <div class="col-md-3 col-sm-6 mt-4 " >
-    <div class="card text-center text-bg-dark" style="width: 100% ;">
-    <img src="Images/Italian/arancini.jpg"  class="card-img-top" alt="...">
+    <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+    <img src="Images/Italian/arancini.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
     <div class="card-body" >
       <h5 class="card-title">Arancini</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -146,8 +146,8 @@
   </div>
 </div>
 <div class="col-md-3 col-sm-6 mt-4 " >
-  <div class="card text-center text-bg-dark" style="width: 100% ;">
-  <img src="Images/Italian/carbonara.jpg"  class="card-img-top" alt="...">
+  <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+  <img src="Images/Italian/carbonara.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
   <div class="card-body" >
     <h5 class="card-title">Carbonara</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
