--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       Categories
                     </a>
                     <ul class="dropdown-menu" class="navbar" style="background-color: white;">
-                      <li><a class="dropdown-item" href="#">All</a></li>
+                      <li><a class="dropdown-item" href="index.html">All</a></li>
                       <li><a class="dropdown-item" href="Chinese.html">Chinese</a></li>
                       <li><a class="dropdown-item" href="Italin.html">Italian</a></li>
                       <li><a class="dropdown-item" href="Thai.html">Thai</a></li>
@@ -76,8 +76,8 @@
   <div class="row row2" style="margin-top: 50px;padding: 40px;">
             <!-- <div class="col-10 d-flex justify-content-around"> -->
               <div class="col-md-3 col-sm-6 mt-2 " >
-                <div class="card text-center text-bg-dark" style="width: 100% ;">
-                <img src="Images/food1.jpg"  class="card-img-top" alt="...">
+                <div class="card text-center text-bg-dark" style="width: 100%; height: 100%;">
+                <img src="Images/food1.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
                 <div class="card-body" >
                   <h5 class="card-title">Plain Dosa</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -86,8 +86,8 @@
               </div>
             </div>
             <div class="col-md-3 col-sm-6 mt-2 " >
-              <div class="card text-center text-bg-dark" style="width: 100% ;">
-              <img src="Images/noodles.webp"  class="card-img-top" alt="...">
+              <div class="card text-center text-bg-dark" style="width: 100%; height: 100%;">
+              <img src="Images/noodles.webp"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
               <div class="card-body" >
                 <h5 class="card-title">noodles</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -96,8 +96,8 @@
             </div>
           </div>
           <div class="col-md-3 col-sm-6 mt-2 " >
-            <div class="card text-center text-bg-dark" style="width: 100% ;">
-            <img src="Images/Continental/Barbecued chicken.jpg"  class="card-img-top" alt="...">
+            <div class="card text-center text-bg-dark" style="width: 100%; height: 100%;">
+            <img src="Images/Continental/Barbecued chicken.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
             <div class="card-body" >
               <h5 class="card-title">Barbecued chicken</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -106,8 +106,8 @@
           </div>
         </div>
         <div class="col-md-3 col-sm-6 mt-2 " >
-          <div class="card text-center text-bg-dark" style="width: 100% ;">
-          <img src="Images/Thai/Mango sticky rice.jpg"  class="card-img-top" alt="...">
+          <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+          <img src="Images/Thai/Mango sticky rice.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
           <div class="card-body" >
             <h5 class="card-title">Mango sticky rice</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -116,8 +116,8 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 mt-4 " >
-        <div class="card text-center text-bg-dark" style="width: 100% ;">
-        <img src="Images/Italian/arancini.jpg"  class="card-img-top" alt="...">
+        <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+        <img src="Images/Italian/arancini.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
         <div class="card-body" >
           <h5 class="card-title">Arancini</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -126,8 +126,8 @@
       </div>
     </div>
     <div class="col-md-3 col-sm-6 mt-4 " >
-      <div class="card text-center text-bg-dark" style="width: 100% ;">
-      <img src="Images/Sea Foods/Pomfret Fish Fry.webp"  class="card-img-top" alt="...">
+      <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+      <img src="Images/Sea Foods/Pomfret Fish Fry.webp"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
       <div class="card-body" >
         <h5 class="card-title">Pomfret Fish Fry</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -136,8 +136,8 @@
     </div>
   </div>
   <div class="col-md-3 col-sm-6 mt-4 " >
-    <div class="card text-center text-bg-dark" style="width: 100% ;">
-    <img src="Images/Chinese/Chilli chicken.jpg"  class="card-img-top" alt="...">
+    <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+    <img src="Images/Chinese/Chilli chicken.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
     <div class="card-body" >
       <h5 class="card-title">Chilli chicken</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -146,8 +146,8 @@
   </div>
 </div>
 <div class="col-md-3 col-sm-6 mt-4 " >
-  <div class="card text-center text-bg-dark" style="width: 100% ;">
-  <img src="Images/Thai/Gaeng keow waan or green curry.jpg"  class="card-img-top" alt="...">
+  <div class="card text-center text-bg-dark" style="width: 100% ;height: 100%;">
+  <img src="Images/Thai/Gaeng keow waan or green curry.jpg"  class="card-img-top" alt="..." style="width: 100%; height: 100%;">
   <div class="card-body" >
     <h5 class="card-title">Gaeng keow waan or green curry</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -194,6 +194,6 @@
 
     <script src="JS/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
